--- a/AdministrarInmobiliaria/nbproject/private/private.properties
+++ b/AdministrarInmobiliaria/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/reroes/.netbeans/8.2/build.properties
+user.properties.file=/home/bitxanax/snap/netbeans/common/data/12.3/build.properties
