--- a/AdministrarInmobiliaria/nbproject/project.properties
+++ b/AdministrarInmobiliaria/nbproject/project.properties
@@ -28,13 +28,14 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/AdministrarInmobiliaria.jar
+dist.jar=${dist.dir}/AdministracionInmobliliaria.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+dist.jlink.dir=${dist.dir}/jlink
+dist.jlink.output=${dist.jlink.dir}/AdministracionInmobliliaria
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${libs.testng.classpath}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -43,8 +44,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.8
-javac.target=1.8
+javac.source=11
+javac.target=11
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -55,6 +56,7 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -63,6 +65,12 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+# The jlink additional root modules to resolve
+jlink.additionalmodules=
+# The jlink additional command line parameters
+jlink.additionalparam=
+jlink.launcher=true
+jlink.launcher.name=AdministracionInmobliliaria
 main.class=paqueteuno.Ejecutor
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
